@@ -1,12 +1,7 @@
 - Improve deja-gnu support
   o resolve problems with dejagnu-1.4.2-3:
     ERROR: Couldn't find config.guess program.
-- Ganglia support
-  o -v option works like SP switch_responds/host_responds
-  o borrow code from gstat
-- Implement C interface to genders
 - Addy requests more prun-like options
 - Consider defining WANT_RECKLESS_HOSTRANGE_EXPANSION to 1 on SP where
   hyphens in hostnames are less likely than linux?
-- Make PAM support work in qshd 
-  o consider whether appropriate to reuse service name "rsh"
+- Optional pdsh.conf file for configurable system wide defaults
