@@ -109,6 +109,11 @@ AC_KRB4
 AM_CONDITIONAL(WITH_KRB4, test  "$ac_have_krb4" =  "yes")
 
 #
+# Check for PAM
+#
+AC_PAM
+
+#
 # Test for support of QSW Elan and Qshell support. If requested and
 #  available, build qshd and qcmd connect module.
 #
